# erpnext-cli

./: README.md  pyproject.toml
src/erpnext_cli/: __init__.py  __main__.py  cli.py
src/erpnext_cli/core/: client.py  documents.py  files.py  methods.py  reports.py  schema.py  strip.py
src/erpnext_cli/tests/: test_core.py  test_full_e2e.py
src/erpnext_cli/utils/: repl_skin.py
