[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext-cli"
version = "1.0.0"
description = "Command-line interface to ERPNext REST/RPC API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
erpnext-cli = "erpnext_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
